--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 16 19:36:25 BRT 2023
-sdk.dir=D\:\\DEVAPP\\android\\sdk
+#Fri Nov 17 09:11:26 BRT 2023
+sdk.dir=C\:\\Users\\GameHouse\\AppData\\Local\\Android\\Sdk
