--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 28 20:26:51 BRT 2023
-sdk.dir=D\:\\DEVAPP\\android\\sdk
+#Wed Nov 29 00:20:29 BRT 2023
+sdk.dir=C\:\\Users\\GameHouse\\AppData\\Local\\Android\\Sdk
